2005-01-04  Raja R Harinath  <rharinath@novell.com>

	* Makefile.am (LIBS): Remove.  Was overriding results of configure check.
	(libMonoPosixHelper_la_LIBADD): List $(GLIB_LIBS) here.

2005-01-04  Jonathan Pryor  <jonpryor@vt.edu>

	* Makefile.am: Add libnsl to LIBS.  Hopefully this will let sparc link.
	* mph.h: Make MPH_INTERNAL conditional on __GNUC__.

2005-01-03  Jonathan Pryor  <jonpryor@vt.edu>

	* signal.c, stdio.c: Remove "function declaration isn't a prototype" warnings.
	* unistd.c: Check for presence of gethostname and sethostname.

2005-01-03  Jonathan Pryor  <jonpryor@vt.edu>

	* mph.h, x-struct-str.c: Add "const" to parameters to remove 
	  "warning: passing arg [2|4]...discards qualifiers" message.

2005-01-03  Jonathan Pryor  <jonpryor@vt.edu>

	* fstab.c: Remove some sparc compiler warnings.

2005-01-03  Jonathan Pryor  <jonpryor@vt.edu>

	* fstab.c: Solaris doesn't support getfsent(3), but it provides equivalent
	  functionality in getvfsent(3C).  Implement Solaris support.

2005-01-02  Jonathan Pryor  <jonpryor@vt.edu>

	* stdio.c: More wrapper functions.  I missed a few macros...  This should
	  complete all macro's defined in <stdio.h> for C99.

2004-12-30  Jonathan Pryor  <jonpryor@vt.edu>

	* stdio.c: More wrapper functions.  This should complete C89's <stdio.h>
	  requirements.

2004-12-30  Jonathan Pryor  <jonpryor@vt.edu>

	* sys-statvfs.c: Further proving that changing code without compiling is
	  dangerous business...  Compiler fix for OS X.

2004-12-30  Jonathan Pryor  <jonpryor@vt.edu>

	* signal.c: Mac OS X portability fixes -- it doesn't provide sighandler_t!

2004-12-30  Jonathan Pryor  <jonpryor@vt.edu>

	* Makefile.am: Add signal.c to the build.
	* signal.c: Added.  Contains helper functions to wrap signal(2).

2004-12-30  Jonathan Pryor  <jonpryor@vt.edu>

	* sys-statvfs.c: Fix Mac OS X build (statfs.f_frsize doesn't exist on OSX;
	  f_fsid isn't an integral type; fstatfs needs to use fpathconf).
