@@ -14,6 +14,7 @@
 
 G_BEGIN_DECLS
 
+#ifndef PLATFORM_WIN32
 gint32
 Mono_Posix_Syscall_L_ctermid (void)
 {
@@ -25,6 +26,7 @@ Mono_Posix_Syscall_L_cuserid (void)
 {
 	return L_cuserid;
 }
+#endif /* ndef PLATFORM_WIN32 */
 
 mph_size_t
 Mono_Posix_Stdlib_fread (void *ptr, mph_size_t size, mph_size_t nmemb, FILE *stream)
